Added responsive version of landing

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <main>
     <section class="empty_section"></section>
     <section class="info_section">
-        <div>
-         <h2>Coming soon</h2>
+        <div class="img_block">
+            <img class="coming_soon_img" src="./images/learn.svg" alt="coming soon">
         </div>
         <!-- Begin Mailchimp Signup Form -->
 
