--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="empty_section"></section>
     <section class="info_section">
         <div class="img_block">
-            <img class="coming_soon_img" src="./images/learn.svg" alt="coming soon">
+           <p class="coming_soon">Coming soon</p>
         </div>
         <!-- Begin Mailchimp Signup Form -->
 
